# movienight

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
movie_night/: app.py  selector.py
resources/: movies.csv
src/main/: filters.py  selector.py
src/tests/: test_filter.py  test_selector.py
tests/: test_filter.py  test_selector.py
