[tool.poetry]
name = "movie-night"
version = "0.1.0"
description = "An extensible, simple movie recomendation app."
authors = ["Em <@emgrasmeder>", "Pao <@psrmx>"]

[tool.poetry.dependencies]
fastapi = "^0.85.0"
numpy = "^1.23.3"
python = "^3.10"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
